--- a/src/common/CMakeLists.txt
+++ b/src/common/CMakeLists.txt
@@ -5,7 +5,9 @@ cmake_minimum_required(VERSION 2.6)
 file(GLOB CommonFiles "*.cpp")
 add_library(common STATIC ${CommonFiles})
 # Das wuerde ich deswegen in das Haupt-CMakeLists skript verschieben.
-#target_link_libraries(common ${TPL_LAPACK_LIBRARIES})
+if (MPI_NEEDED)
+  target_link_libraries(common ${MPI_CXX_LIBRARIES})
+endif()
 
 file(GLOB CommonFiles2 "vesselgen/*.cpp")
 add_library(vesselgenlib STATIC ${CommonFiles2})
