--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,9 @@ add_definitions(-DSILENT)
 
 # set a search path for additional custom cmake modules.
 # according to recommendation in https://cmake.org/Wiki/CMake:How_To_Find_Libraries
-set(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH};${CMAKE_SOURCE_DIR}/cmake/modules/")
-message(${CMAKE_MODULE_PATH})
+set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/modules/;${CMAKE_MODULE_PATH}")
+message("CMAKE_MODULE_PATH: ${CMAKE_MODULE_PATH}")
+message("CMAKE_EXE_LINKER_FLAGS: ${CMAKE_EXE_LINKER_FLAGS}")
 
 # all variables propagate down the tree so set up as much as possible here
 set (ENABLE_OMP TRUE CACHE BOOL "enable openmp")
@@ -15,9 +16,12 @@ set (ADDITIONAL_INCLUDE_DIRS CACHE PATH "Additional dirs to search for included 
 set (ADDITIONAL_LIBRARY_DIRS CACHE PATH "Additional dirs to search for linked libraries")
 
 find_package(Boost REQUIRED COMPONENTS "program_options")
+find_package(Boost REQUIRED COMPONENTS "system")
+set(myLibs ${Boost_SYSTEM_LIBRARY})
 #note there are system without eigen, so let the configure fail here
 find_package(Eigen3 3.2 QUIET)
-find_package(HDF5 1.8.9 REQUIRED)
+#find_package(HDF5 1.8.10 REQUIRED)
+find_package(HDF5 REQUIRED)
 find_package(LAPACK REQUIRED)
 find_package(BLAS REQUIRED)
 
@@ -61,6 +65,7 @@ include_directories(${PYTHON_INCLUDE_DIR})
 include_directories(${PYTHON_NUMPY_INCLUDE_DIR})#this is needed here so that the whole system uses the same numpy source, if this is let out here the compiler may fall back to default numpy
 #this package has a different name on ubuntu14
 #so either one of this is needed!
+
 find_package(Boost COMPONENTS "python-2.7")
 if( NOT Boost_PYTHON-2.7_FOUND)
   #we are on ubuntu14
@@ -74,27 +79,30 @@ endif()
 
 
 
-message(STATUS "PYTHON include dirs 	=${PYTHON_INCLUDE_DIRS}")
-message(STATUS "PYTHON libs         	=${PYTHON_LIBRARIES}")
+message(STATUS "PYTHON_INCLUDE_DIRS 	=${PYTHON_INCLUDE_DIRS}")
+message(STATUS "PYTHON_LIBRARIES         	=${PYTHON_LIBRARIES}")
 IF(Boost_PYTHON-PY27_FOUND)
   message(STATUS "Boost_PYTHON-PY27_LIBRARY 	=${Boost_PYTHON-PY27_LIBRARY}")
   message(STATUS "Boost_PYTHON-PY27_LIBRARY_DEBUG = ${Boost_PYTHON-PY27_LIBRARY_DEBUG}")
   message(STATUS "Boost_PYTHON-PY27_LIBRARY_RELEASE = ${Boost_PYTHON-PY27_LIBRARY_RELEASE}")
+  set(myLibs ${Boost_PYTHON-PY27_LIBRARY})
 ENDIF()
 IF(Boost_PYTHON-2.7_FOUND)
   message(STATUS "Boost_PYTHON-2.7_LIBRARY 	=${Boost_PYTHON-2.7_LIBRARY}")
   message(STATUS "Boost_PYTHON-2.7_LIBRARY_DEBUG = ${Boost_PYTHON-2.7_LIBRARY_DEBUG}")
   message(STATUS "Boost_PYTHON-2.7_LIBRARY_RELEASE = ${Boost_PYTHON-2.7_LIBRARY_RELEASE}")
+  set(myLibs ${Boost_PYTHON-2.7_LIBRARY})
 ENDIF()
 message(STATUS "Numpy include dirs  	=${PYTHON_NUMPY_INCLUDE_DIR}")
 message(STATUS "PYTHON_LIBRARIES 	=${PYTHON_LIBRARIES}")
 
 message(STATUS "Boost_PROGRAM_OPTIONS_LIBRARY_RELEASE         	=${Boost_PROGRAM_OPTIONS_LIBRARY_RELEASE}")
 message(STATUS "LAPACK lib 					=${LAPACK_LIBRARIES}")
-message(STATUS "BLAS lib   = ${BLAS_LIBRARIES}")
-message(STATUS "HDF5 lib          = ${HDF5_LIBRARIES}")
-message(STATUS "HDF5 lib dirs     = ${HDF5_LIBRARY_DIRS}")
-message(STATUS "HDF5 include dirs = ${HDF5_INCLUDE_DIRS}")
+message(STATUS "BLAS_LIBRARIES   	= ${BLAS_LIBRARIES}")
+message(STATUS "HDF5_CXX_LIBRARIES      = ${HDF5_CXX_LIBRARIES}")
+message(STATUS "HDF5_C_LIBRARIES    	= ${HDF5_C_LIBRARIES}")
+message(STATUS "HDF5_LIBRARY_DIRS	= ${HDF5_LIBRARY_DIRS}")
+message(STATUS "HDF5_INCLUDE_DIRS	= ${HDF5_INCLUDE_DIRS}")
 message(STATUS "Boost_lib dirs     = ${Boost_LIBRARY_DIRS}")
 message(STATUS "Boost include dirs = ${Boost_INCLUDE_DIRS}")
 message(STATUS "TBB lib          = ${TBB_tbb_LIBRARY_RELEASE}")
@@ -105,6 +113,7 @@ message(STATUS "Trilinos lib dirs     = ${Trilinos_LIBRARY_DIRS}")
 message(STATUS "Trilinos include dirs = ${Trilinos_INCLUDE_DIRS}")
 message(STATUS "OpenMP_CXX_FLAGS      = ${OpenMP_CXX_FLAGS}")
 
+include_directories(${PYTHON_INCLUDE_DIRS})
 include_directories(${Trilinos_INCLUDE_DIRS})
 link_directories(${Trilinos_LIBRARY_DIRS})
 include_directories(${HDF5_INCLUDE_DIRS})
@@ -129,29 +138,31 @@ set(myLibs
   ${LAPACK_LIBRARIES}
   ${BLAS_LIBRARIES}
   ${PNG_LIBRARIES}
+  ${PYTHON_LIBRARIES}
 )
 #message(STATUS "myLibs = ${myLibs}")
 
 
 ### compiler stuff
-
 # this must come first as it overwrites preceeding compiler flags
-#set(Warnings "-Wall -Wno-unknown-pragmas -Wno-reorder -Wno-unused-variable -Wpointer-arith -Wwrite-strings -Woverloaded-virtual -Wno-sign-compare -Wno-long-long  -Wuninitialized -Wconversion
-set(Warnings "-Wall -Wextra -Wno-sign-compare -Wno-reorder -Wno-deprecated -Wuninitialized -Wno-unused-parameter -Wno-unused-variable -Wno-unused-result -Wno-unused-function -Wno-unused-local-typedefs") # -Wno-unknown-pragmas   -Wpointer-arith -Wwrite-strings -Woverloaded-virtual -Wno-long-long  -Wuninitialized ")
 
 GET_FILENAME_COMPONENT(compiler_name ${CMAKE_C_COMPILER} NAME)
 string(COMPARE EQUAL ${compiler_name} "icc" IS_INTEL_COMPILER)
 if (NOT IS_INTEL_COMPILER)
   message("Set for gnu gxx")
+  set(Warnings "-Wall -Wextra -Wno-sign-compare -Wno-reorder -Wno-deprecated -Wuninitialized -Wno-unused-parameter -Wno-unused-variable -Wno-unused-result -Wno-unused-function -Wno-unused-local-typedefs") # -Wno-unknown-pragmas   -Wpointer-arith -Wwrite-strings -Woverloaded-virtual -Wno-long-long  -Wuninitialized ")
   set(Warnings "${Warnings} -Wno-deprecated-declarations")  # -Wswitch -Wno-extra -Wsynth
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${Warnings} -pthread -fPIC -ftemplate-depth-128")
 else()
-  message("Set for intel icpc using:")
-  message(${CMAKE_C_COMPILER})
   #1478 is a deprecation warning for auto_ptr
   #set(Warnings "-gcc -cxxlib -wd1478") #gnu++0x
-  set(Warnings "-wd1478") #gnu++0x
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread -fPIC -ftemplate-depth-128")
+  #set(Warnings "-wd1478") #gnu++0x
+  if(OPENMP_FOUND)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+  endif()
+  message("Set for intel using:")
+  message("CMAKE_C_COMPILER: 	${CMAKE_C_COMPILER}")
+  message("CMAKE_CXX_COMPILER: 	${CMAKE_CXX_COMPILER}")
 endif()
 
 #always use new c++11 standard
