--- a/src/adaption/CMakeLists.txt
+++ b/src/adaption/CMakeLists.txt
@@ -7,7 +7,8 @@ file(GLOB AdaptionFiles "*.cpp")
 
 add_library(adaption_ SHARED
             ${AdaptionFiles})
-target_link_libraries(adaption_ krebs_)
+#target_link_libraries(adaption_ krebs_ pagmo ${MPI_CXX_LIBRARIES})-->already done by pagmo
+target_link_libraries(adaption_ krebs_ pagmo )
 
 #set_target_properties(adaption_ PROPERTIES INSTALL_RPATH_USE_LINK_PATH TRUE)
 
