--- a/src/python_krebsutils/CMakeLists.txt
+++ b/src/python_krebsutils/CMakeLists.txt
@@ -17,9 +17,9 @@ if (False)
   message(STATUS "MPI_LIBRARY = ${MPI_LIBRARY}")
   message(STATUS "MPI_CXX_COMPILER_FLAGS = ${MPI_CXX_COMPILER_FLAGS}")
   message(STATUS "MPI_CXX_LINK_FLAGS = ${MPI_CXX_LINK_FLAGS}")
-  target_link_libraries(krebs_ common vesselgenlib numpycpp ${myLibs} ${Boost_LIBRARIES} ${PYTHON_LIBRARIES} ${MPI_CXX_LIBRARIES})
+  target_link_libraries(krebs_ common vesselgenlib ${myLibs} ${Boost_LIBRARIES} ${PYTHON_LIBRARIES} ${MPI_CXX_LIBRARIES})
 else()
-  target_link_libraries(krebs_ common vesselgenlib numpycpp ${myLibs} ${Boost_LIBRARIES} ${PYTHON_LIBRARIES})
+  target_link_libraries(krebs_ common vesselgenlib ${myLibs} ${Boost_LIBRARIES} ${PYTHON_LIBRARIES})
 endif()
 set_target_properties(krebs_ PROPERTIES INSTALL_RPATH_USE_LINK_PATH TRUE)
 
