--- a/src/adaption/CMakeLists.txt
+++ b/src/adaption/CMakeLists.txt
@@ -7,9 +7,17 @@ file(GLOB AdaptionFiles "*.cpp")
 
 add_library(adaption_ SHARED
             ${AdaptionFiles})
-#target_link_libraries(adaption_ krebs_ pagmo ${MPI_CXX_LIBRARIES})-->already done by pagmo
-target_link_libraries(adaption_ krebs_ pagmo )
-
+#but not the headers
+#by this flag we can use decide if pagmo uses MPI
+option(PAGMO_MPI "is pagmo mpi?" ON)
+if(PAGMO_MPI)
+  ADD_DEFINITIONS(-DPAGMO_ENABLE_MPI)
+  find_package(MPI)
+  include_directories(${MPI_CXX_INCLUDE_PATH})
+  target_link_libraries(adaption_ krebs_ pagmo ${MPI_CXX_LIBRARIES})
+else()
+  target_link_libraries(adaption_ krebs_ pagmo)
+endif()
 #set_target_properties(adaption_ PROPERTIES INSTALL_RPATH_USE_LINK_PATH TRUE)
 
 install(TARGETS adaption_
