--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -25,7 +25,7 @@ target_link_libraries(test_pagmo pagmo boost_system ${myLibs} )
 
 add_executable(test_pagmo_s test_pagmo_serialize.cpp)
 #set_target_properties(test_pagmo PROPERTIES DEBUG_POSTFIX ${CMAKE_DEBUG_POSTFIX} LINK_FLAGS "-rdynamic")
-target_link_libraries(test_pagmo_s pagmo boost_system adaption_ ${myLibs} )
+target_link_libraries(test_pagmo_s pagmo boost_system adaption_ common ${myLibs} )
 
 add_executable(test_boost_serialize test_boost_serialize.cpp)
 target_link_libraries(test_boost_serialize boost_serialization)
