--- a/src/adaption/CMakeLists.txt
+++ b/src/adaption/CMakeLists.txt
@@ -9,12 +9,10 @@ add_library(adaption_ SHARED
             ${AdaptionFiles})
 #but not the headers
 #by this flag we can use decide if pagmo uses MPI
-option(PAGMO_MPI "is pagmo mpi?" ON)
+
 if(PAGMO_MPI)
-  ADD_DEFINITIONS(-DPAGMO_ENABLE_MPI)
-  find_package(MPI)
-  include_directories(${MPI_CXX_INCLUDE_PATH})
-  target_link_libraries(adaption_ krebs_ pagmo ${MPI_CXX_LIBRARIES})
+  message("pagmo should be mpi")
+  target_link_libraries(adaption_ krebs_ pagmoMPI ${MPI_CXX_LIBRARIES})
 else()
   target_link_libraries(adaption_ krebs_ pagmo)
 endif()
