--- a/src/adaption/CMakeLists.txt
+++ b/src/adaption/CMakeLists.txt
@@ -1,8 +1,6 @@
 cmake_minimum_required(VERSION 2.6)
 project(adaption)
 
-#include_directories(../common)
-
 file(GLOB AdaptionFiles "*.cpp")
 
 add_library(adaption_ SHARED
@@ -10,11 +8,11 @@ add_library(adaption_ SHARED
 #but not the headers
 #by this flag we can use decide if pagmo uses MPI
 
-if(PAGMO_MPI)
+if(USE_PAGMO)
   message("pagmo should be mpi")
   target_link_libraries(adaption_ krebs_ pagmoMPI ${MPI_CXX_LIBRARIES})
 else()
-  target_link_libraries(adaption_ krebs_ pagmo)
+  target_link_libraries(adaption_ krebs_)
 endif()
 #set_target_properties(adaption_ PROPERTIES INSTALL_RPATH_USE_LINK_PATH TRUE)
 
