--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -31,23 +31,19 @@ else()
   target_link_libraries(test_pagmo krebs_ pagmo boost_system)
 endif()
 
-#target_link_libraries(test_pagmo pagmo boost_system ${myLibs} )
-
-add_executable(test_pagmo_s test_pagmo_serialize.cpp)
-#set_target_properties(test_pagmo PROPERTIES DEBUG_POSTFIX ${CMAKE_DEBUG_POSTFIX} LINK_FLAGS "-rdynamic")
-if(PAGMO_MPI)
-  message("pagmo should be mpi")
-  target_link_libraries(test_pagmo_s adaption_ common ${myLibs} pagmoMPI)
-else()
-  target_link_libraries(test_pagmo_s adaption_ common ${myLibs} pagmo)
+if(USE_ADAPTION)
+  add_executable(test_pagmo_s test_pagmo_serialize.cpp)
+  if(PAGMO_MPI)
+    message("pagmo should be mpi")
+    target_link_libraries(test_pagmo_s adaption_ common ${myLibs} pagmoMPI)
+  else()
+    target_link_libraries(test_pagmo_s adaption_ common ${myLibs} pagmo)
+  endif()
+  install(TARGETS test_pagmo_s RUNTIME DESTINATION bin)
 endif()
-
-#target_link_libraries(test_pagmo_s pagmo boost_system adaption_ common ${myLibs} )
 
 add_executable(test_boost_serialize test_boost_serialize.cpp)
 target_link_libraries(test_boost_serialize boost_serialization)
-
-
 
 # add_executable(test_h5cpp test_hdf5_cpp.cpp)
 # link_directories(${HDF5_LIBRARY_DIRS})
@@ -58,4 +54,4 @@ target_link_libraries(test_boost_serialize boost_serialization)
 # target_link_libraries(test_convection_diffusion ${myLibs})
 
 
-install(TARGETS tests test_pagmo test_stepper test_pagmo_s test_boost_serialize RUNTIME DESTINATION bin)
+install(TARGETS tests test_pagmo test_stepper test_boost_serialize RUNTIME DESTINATION bin)
