--- a/src/tumors/CMakeLists.txt
+++ b/src/tumors/CMakeLists.txt
@@ -1,16 +1,25 @@
 include_directories(../)
 include_directories(../common)
 file(GLOB Tumor_Files "*.cpp")
+#file(GLOB Tumor_Files "bulktissue-with-vessels.cpp python_tumors.cpp")
 
-add_library(bulktissue_with STATIC bulktissue-with-vessels.cpp)
+#add_library(bulktissue_with STATIC bulktissue-with-vessels.cpp)
 
 add_library(tumor_ SHARED ${Tumor_Files})
-target_link_libraries(tumor_
-#vesselgenlib
-bulktissue_with
-adaption_ 
-krebs_
-${myLibs})
+
+if(USE_ADAPTION)
+  set(link_tumor_to_this 
+  krebs_
+  adaption_
+  ${myLibs}
+  )
+else()
+  set(link_tumor_to_this 
+  krebs_
+  ${myLibs}
+  )
+endif()
+target_link_libraries(tumor_ ${link_tumor_to_this})
 
 set_target_properties(tumor_ PROPERTIES INSTALL_RPATH_USE_LINK_PATH TRUE)
 
