works on cluster, but not on local mashine, something with submission system and imports of the multiprocessor stuff

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,9 +13,19 @@ set (ENABLE_OMP TRUE CACHE BOOL "enable openmp")
 #option(ENABLE_OMP CACHE ON)
 option(USE_ADAPTION CACHE OFF)
 if(USE_ADAPTION)
-  message("USE_ADAPTION preprocessor defined")
+  message(STATUS "ADAPTION: USE_ADAPTION preprocessor defined")
   add_definitions(-DUSE_ADAPTION)
 endif()
+option(USE_PAGMO CACHE OFF)
+if(USE_PAGMO)
+  if(not USE_ADAPTION)
+    message("so far there is no usage for pagmo without adation, we set it to be true!!!")
+    option(USE_ADAPTION CACHE ON)
+  endif()
+  message("USE_PAGMO preprocessor defined")
+  add_definitions(-DUSE_PAGMO)
+endif()
+
 set (MAX_OPTIMIZATION TRUE CACHE BOOL "compile with -march=native (important for VM) and some other optimization options")
 # set (MPI_NEEDED FALSE CACHE BOOL "Must we link to the MPI libraries?")
 set (ADDITIONAL_INCLUDE_DIRS CACHE PATH "Additional dirs to search for included files")
