proper multithread handling of libtumor on clusters

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,6 +47,9 @@ endif()
 find_package(Eigen3 3.2 QUIET)
 #find_package(HDF5 1.8.10 REQUIRED)
 find_package(HDF5 REQUIRED)
+if(HDF5_IS_PARALLEL)
+  message(WARNING "your hdf5 is parallel, you probably need mpi")
+endif()
 find_package(LAPACK REQUIRED)
 find_package(BLAS REQUIRED)
 
@@ -70,7 +73,8 @@ if (MPI_NEEDED)
   message(STATUS "MPI_CXX_LINK_FLAGS = ${MPI_CXX_LINK_FLAGS}")
   
   include_directories(${MPI_CXX_INCLUDE_PATH})
-  set(myLibs ${MPI_CXX_LIBRARIES})
+  #set(myLibs ${MPI_CXX_LIBRARIES})
+  set(myLibs ${MPI_LIBRARY})
   if (HDF5_IS_PARALLEL) #good here
   message(WARNING "good choice here")
   else()
