--- a/src/python_krebsutils/CMakeLists.txt
+++ b/src/python_krebsutils/CMakeLists.txt
@@ -14,14 +14,14 @@ if (False)
   message(STATUS "Including MPI for libkrebs")
   message(STATUS "MPI libs         = ${MPI_CXX_LIBRARIES}")
   message(STATUS "MPI include dirs = ${MPI_CXX_INCLUDE_PATH}")
-  message(STATUS "MPI_LIBRARY = ${MPI_LIBRARY}")
+  message(STATUS "MPI_LIBRARY = ${MPI_LIBRARY}")#-->DEPRECATED
   message(STATUS "MPI_CXX_COMPILER_FLAGS = ${MPI_CXX_COMPILER_FLAGS}")
   message(STATUS "MPI_CXX_LINK_FLAGS = ${MPI_CXX_LINK_FLAGS}")
   target_link_libraries(krebs_ common vesselgenlib ${myLibs} ${MPI_CXX_LIBRARIES})
 else()
   target_link_libraries(krebs_ common vesselgenlib ${myLibs} )
 endif()
-set_target_properties(krebs_ PROPERTIES INSTALL_RPATH_USE_LINK_PATH TRUE)
+#set_target_properties(krebs_ PROPERTIES INSTALL_RPATH_USE_LINK_PATH TRUE)
 
 install(TARGETS krebs_
 	LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
