cpp program to debug pagmo and trilinos issues without python interaction

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,11 +16,11 @@ if(USE_ADAPTION)
   message(STATUS "ADAPTION: USE_ADAPTION preprocessor defined")
   add_definitions(-DUSE_ADAPTION)
 endif()
-option(USE_PAGMO CACHE OFF)
+option(USE_PAGMO OFF)
 if(USE_PAGMO)
-  if(not USE_ADAPTION)
+  if(~USE_ADAPTION)
     message("so far there is no usage for pagmo without adation, we set it to be true!!!")
-    option(USE_ADAPTION CACHE ON)
+    option(USE_ADAPTION ON)
   endif()
   message("USE_PAGMO preprocessor defined")
   add_definitions(-DUSE_PAGMO)
