--- a/src/adaption/CMakeLists.txt
+++ b/src/adaption/CMakeLists.txt
@@ -5,6 +5,9 @@ if(USE_PAGMO)
   #set(AdaptionFiles "python-adaption.cpp adaption_model2.cpp adaption_as_pagmo_problem.cpp")
   #file(GLOB AdaptionFiles "python-adaption.cpp adaption_model2.cpp adaption_as_pagmo_problem.cpp")
   add_library(adaption_ SHARED python-adaption.cpp adaption_model2.cpp adaption_as_pagmo_problem.cpp)
+  add_executable(run_pagmo run_pagmo.cpp)
+  target_link_libraries(run_pagmo adaption_ pagmoMPI ${MPI_CXX_LIBRARIES})
+  install(TARGETS run_pagmo RUNTIME DESTINATION bin)
 else()
   #set(AdaptionFiles "python-adaption.cpp adaption_model2.cpp")
   #file(GLOB AdaptionFiles "python-adaption.cpp adaption_model2.cpp")
