consisten openMP handling, test of belos

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -54,5 +54,7 @@ target_link_libraries(test_boost_serialize boost_serialization)
 # add_executable(test_convection_diffusion test_convection_diffusion.cpp)
 # target_link_libraries(test_convection_diffusion ${myLibs})
 
+add_executable(test_belos test_belos.cpp)
+target_link_libraries(test_belos ${myLibs})
 
 install(TARGETS tests test_stepper test_boost_serialize RUNTIME DESTINATION bin)
