changed to linear not object oriented implementation of solver to test belos

--- a/src/python_krebsutils/CMakeLists.txt
+++ b/src/python_krebsutils/CMakeLists.txt
@@ -7,8 +7,9 @@ add_library(krebs_ SHARED
             mainboost.cpp pylatticedata.cpp python-helpers.cpp
             povray_export.cpp samplevessels.cpp python_tumormodel_tests.cpp
             python_numericaltools_tests.cpp python_vesselgen.cpp
-            python_elliptic_solver_test.cpp python_calcflow.cpp python_interpolate_between_vessels.cpp
+            python_calcflow.cpp python_interpolate_between_vessels.cpp
             python_murray.cpp)
+#I have to take care of python_elliptic_solver_test.cpp
 if (False)
   find_package(MPI REQUIRED)
   message(STATUS "Including MPI for libkrebs")
