belos sover working with mpi on arch linux

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,11 +13,17 @@ if(USE_ADAPTION)
   message(STATUS "ADAPTION: USE_ADAPTION preprocessor defined")
   add_definitions(-DUSE_ADAPTION)
 endif()
-option(USE_PAGMO OFF)
+option(USE_PAGMO CACHE OFF)
+#It would be nicer to see if pagmo was compilled 
+#with mpi automatically, pagmo2 is supporting that
+option(USE_PAGMO_MPI CACHE OFF)
+if(USE_PAGMO_MPI)
+  set(USE_PAGMO ON)
+endif()
 if(USE_PAGMO)
   if(~USE_ADAPTION)
     message("so far there is no usage for pagmo without adation, we set it to be true!!!")
-    option(USE_ADAPTION ON)
+    option(USE_ADAPTION CACHE ON)
   endif()
   message("USE_PAGMO preprocessor defined")
   add_definitions(-DUSE_PAGMO)
