--- a/src/adaption/CMakeLists.txt
+++ b/src/adaption/CMakeLists.txt
@@ -6,7 +6,9 @@ if(USE_PAGMO)
   #file(GLOB AdaptionFiles "python-adaption.cpp adaption_model2.cpp adaption_as_pagmo_problem.cpp")
   add_library(adaption_ SHARED python-adaption.cpp adaption_model2.cpp adaption_as_pagmo_problem.cpp)
   add_executable(run_pagmo run_pagmo.cpp)
-  target_link_libraries(run_pagmo adaption_ pagmoMPI ${MPI_CXX_LIBRARIES})
+#  target_link_libraries(run_pagmo adaption_ pagmoMPI ${MPI_CXX_LIBRARIES})
+  target_link_libraries(run_pagmo adaption_ pagmo)
+  
   install(TARGETS run_pagmo RUNTIME DESTINATION bin)
 else()
   #set(AdaptionFiles "python-adaption.cpp adaption_model2.cpp")
@@ -20,9 +22,13 @@ endif()
 #but not the headers
 #by this flag we can use decide if pagmo uses MPI
 
-if(USE_PAGMO)
+if(USE_PAGMO_MPI)
   message("pagmo should be mpi")
-  target_link_libraries(adaption_ krebs_ pagmoMPI ${MPI_CXX_LIBRARIES})
+#   target_link_libraries(adaption_ krebs_ pagmoMPI ${MPI_CXX_LIBRARIES})
+#   target_link_libraries(adaption_ krebs_ pagmo ${MPI_CXX_LIBRARIES})
+  find_package(MPI)
+  message("MPI_CXX_LIBRARIES: ${MPI_CXX_LIBRARIES} ")
+  target_link_libraries(adaption_ krebs_ pagmo ${MPI_CXX_LIBRARIES})
 else()
   target_link_libraries(adaption_ krebs_)
 endif()
