--- a/src/adaption/CMakeLists.txt
+++ b/src/adaption/CMakeLists.txt
@@ -28,14 +28,14 @@ if(USE_PAGMO_MPI)
   message("MPI_CXX_LIBRARIES: ${MPI_CXX_LIBRARIES} ")
   add_library(adaption_ SHARED python-adaption.cpp adaption_model2.cpp adaption_as_pagmo_problem.cpp)
   target_link_libraries(adaption_ krebs_ pagmo ${MPI_CXX_LIBRARIES})
-  add_executable(run_pagmo run_pagmo.cpp)
-  install(TARGETS run_pagmo RUNTIME DESTINATION bin)
+  #add_executable(run_pagmo run_pagmo.cpp)
+  #install(TARGETS run_pagmo RUNTIME DESTINATION bin)
 else()
   add_library(adaption_ SHARED python-adaption.cpp adaption_model2.cpp adaption_as_pagmo_problem.cpp)
   target_link_libraries(adaption_ krebs_)
-  add_executable(run_pagmo run_pagmo.cpp)
-  target_link_libraries(run_pagmo adaption_ pagmo)
-  install(TARGETS run_pagmo RUNTIME DESTINATION bin)
+  #add_executable(run_pagmo run_pagmo.cpp)
+  #target_link_libraries(run_pagmo adaption_ pagmo)
+  #install(TARGETS run_pagmo RUNTIME DESTINATION bin)
 endif()
 set_target_properties(adaption_ PROPERTIES INSTALL_RPATH_USE_LINK_PATH TRUE)
 
