--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -34,20 +34,30 @@ install(TARGETS test_stepper RUNTIME DESTINATION bin)
 #   target_link_libraries(test_pagmo krebs_ pagmo boost_system)
 #    install(TARGETS test_pagmo RUNTIME DESTINATION bin)
 # endif()
+if(USE_ADAPTION)
+  add_executable(test_pagmo test_pagmo.cpp)
+  if(PAGMO_MPI)
+    message("pagmo should be mpi")
+    target_link_libraries(test_pagmo common adaption_ ${myLibs} pagmo)
+  else()
+    target_link_libraries(test_pagmo common adaption_ ${myLibs} pagmo)
+  endif()
+  install(TARGETS test_pagmo RUNTIME DESTINATION bin)
+endif()
 
-if(USE_PAGMO)
+if(USE_ADAPTION)
   add_executable(test_pagmo_s test_pagmo_serialize.cpp)
   if(PAGMO_MPI)
     message("pagmo should be mpi")
-    target_link_libraries(test_pagmo_s adaption_ common ${myLibs} pagmoMPI)
+    target_link_libraries(test_pagmo_s common adaption_ ${myLibs} pagmo)
   else()
-    target_link_libraries(test_pagmo_s adaption_ common ${myLibs} pagmo)
+    target_link_libraries(test_pagmo_s common adaption_ ${myLibs} pagmo)
   endif()
   install(TARGETS test_pagmo_s RUNTIME DESTINATION bin)
 endif()
 
 add_executable(test_boost_serialize test_boost_serialize.cpp)
-target_link_libraries(test_boost_serialize boost_serialization)
+target_link_libraries(test_boost_serialize ${myLibs})
 
 # add_executable(test_h5cpp test_hdf5_cpp.cpp)
 # link_directories(${HDF5_LIBRARY_DIRS})
@@ -58,3 +68,18 @@ target_link_libraries(test_boost_serialize boost_serialization)
 # target_link_libraries(test_convection_diffusion ${myLibs})
 
 install(TARGETS test_boost_serialize RUNTIME DESTINATION bin)
+
+if(USE_ADAPTION)
+  if(USE_PAGMO_MPI)
+    message("pagmo should be mpi")
+    find_package(MPI)
+    message("MPI_CXX_LIBRARIES: ${MPI_CXX_LIBRARIES} ")
+    add_executable(run_pagmo run_pagmo.cpp)
+    target_link_libraries(run_pagmo adaption_ pagmo ${MPI_CXX_LIBRARIES})
+    install(TARGETS run_pagmo RUNTIME DESTINATION bin)
+  else()
+    add_executable(run_pagmo run_pagmo.cpp)
+    target_link_libraries(run_pagmo adaption pagmo)
+    install(TARGETS run_pagmo RUNTIME DESTINATION bin)
+  endif()
+endif()
