--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -34,7 +34,7 @@ install(TARGETS test_stepper RUNTIME DESTINATION bin)
 #   target_link_libraries(test_pagmo krebs_ pagmo boost_system)
 #    install(TARGETS test_pagmo RUNTIME DESTINATION bin)
 # endif()
-if(USE_ADAPTION)
+if(USE_PAGMO)
   add_executable(test_pagmo test_pagmo.cpp)
   if(PAGMO_MPI)
     message("pagmo should be mpi")
@@ -45,7 +45,7 @@ if(USE_ADAPTION)
   install(TARGETS test_pagmo RUNTIME DESTINATION bin)
 endif()
 
-if(USE_ADAPTION)
+if(USE_PAGMO)
   add_executable(test_pagmo_s test_pagmo_serialize.cpp)
   if(PAGMO_MPI)
     message("pagmo should be mpi")
@@ -69,7 +69,7 @@ target_link_libraries(test_boost_serialize ${myLibs} pagmo)
 
 install(TARGETS test_boost_serialize RUNTIME DESTINATION bin)
 
-if(USE_ADAPTION)
+if(USE_PAGMO)
   if(USE_PAGMO_MPI)
     message("pagmo should be mpi")
     find_package(MPI)
