--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,8 +16,8 @@ message("TrilinosDIR: ${TrilinosDIR}")
 include(${CMAKE_ROOT}/Modules/CMakeDependentOption.cmake)
 
 option(USE_ADAPTION "decide to build the adaption library" OFF)
-CMAKE_DEPENDENT_OPTION(USE_PAGMO "Use Pagmo" ON "USE_ADAPTION;" ON)
-CMAKE_DEPENDENT_OPTION(USE_PAGMO_MPI "MPI version of Pagmo" ON
+CMAKE_DEPENDENT_OPTION(USE_PAGMO "Use Pagmo" OFF "USE_ADAPTION;" ON)
+CMAKE_DEPENDENT_OPTION(USE_PAGMO_MPI "MPI version of Pagmo" OFF
                        "USE_ADAPTION;USE_PAGMO" ON)
 option(TOTAL_SILENCE "suppress all output, good for running on cluster" OFF)
 if(TOTAL_SILENCE)
