made iff work with belos, made qsub- local work, added time overlay for tumor simulation, proper deap setting for simulations

--- a/src/python_krebsutils/CMakeLists.txt
+++ b/src/python_krebsutils/CMakeLists.txt
@@ -22,7 +22,7 @@ if (False)
 else()
   target_link_libraries(krebs_ common vesselgenlib ${myLibs} )
 endif()
-#set_target_properties(krebs_ PROPERTIES INSTALL_RPATH_USE_LINK_PATH TRUE)
+set_target_properties(krebs_ PROPERTIES INSTALL_RPATH_USE_LINK_PATH TRUE)
 
 install(TARGETS krebs_
 	LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
